# epics-sdds

epics/extensions/src/SDDS/: CMakeLists.txt  COPYRIGHT.TXT
epics/extensions/src/SDDS/.svn/: all-wcprops  entries
epics/extensions/src/SDDS/.svn/text-base/: Makefile.svn-base
epics/extensions/src/SDDS/2d_interpolate/.svn/: all-wcprops  entries
epics/extensions/src/SDDS/2d_interpolate/csa/: config.h
epics/extensions/src/SDDS/2d_interpolate/nn/: config.h  nncommon.c  nnpi.c
epics/extensions/src/SDDS/OOSDDSlib/.svn/: entries
epics/extensions/src/SDDS/SDDS3lib/: SDDSFile.cc
epics/extensions/src/SDDS/SDDS3lib/.svn/: entries
epics/extensions/src/SDDS/SDDSaps/: SDDSaps.c  csv2sdds.c  plaindata2sdds.c  sdds2stl.c  sdds2tiff.c  sddsanalyticsignal.c  sddsbaseline.c  sddschanges.c  sddscliptails.c  sddscollapse.c  sddscombine.c  sddsconvolve.c  sddsderef.c  sddsderiv.c  sddsdistest.c  sddsendian.c  sddseventhist.c  sddsexpand.c  sddsexpfit.c  sddsfdfilter.c  sddsfft.c  sddsinterp.c  sddsinterpset.c  sddsnaff.c  sddspeakfind.c  sddsselect.c  sddssequence.c  sddsshift.c  sddsshiftcor.c  sddsslopes.c  sddssmooth.c  sddssort.c  sddssplit.c  sddstimeconvert.c  sddsvslopes.c  sddsxref.c  tek2sdds.c
epics/extensions/src/SDDS/SDDSaps/.svn/: all-wcprops  entries
epics/extensions/src/SDDS/SDDSaps/doc/: SDDStoolkit.tex  csv2sdds.tex  plaindata2sdds.tex  sddsprocess.tex  sddsxra.tex
epics/extensions/src/SDDS/SDDSaps/sddsplots/: graph.h  graphics.c  make_scales.c  post.trm  sddsplotAP.c  sddsplotMapping.c  sddsplotRead.c  x11.trm
epics/extensions/src/SDDS/SDDSlib/: Makefile.OAG  Makefile.OAG2  SDDS_binary.c  SDDS_copy.c  SDDS_data.c  SDDS_input.c  SDDS_internal.h  SDDS_transfer.c  SDDS_utils.c  SDDSmpi_output.c
epics/extensions/src/SDDS/SDDSlib/.svn/: all-wcprops  entries
epics/extensions/src/SDDS/cmatlib/.svn/: entries
epics/extensions/src/SDDS/daq/.svn/: entries
epics/extensions/src/SDDS/examples/.svn/: entries
epics/extensions/src/SDDS/fdlibm/.svn/: all-wcprops  entries
epics/extensions/src/SDDS/fftpack/.svn/: all-wcprops  entries
epics/extensions/src/SDDS/fortran/: Makefile  Makefile.OAG
epics/extensions/src/SDDS/fortran/.svn/: all-wcprops  entries
epics/extensions/src/SDDS/gd/: Makefile.OAG  config.h  gd.c  gd_gd.c  gd_io_file.c  gd_io_ss.c  gd_jpeg.c  gd_ss.c  gdcache.c  gdcache.h  gdft.c
epics/extensions/src/SDDS/gd/.svn/: all-wcprops  entries
epics/extensions/src/SDDS/gnuplot2.0/.svn/: entries
epics/extensions/src/SDDS/include/: SDDS3.h  contour.h  mdb.h
epics/extensions/src/SDDS/include/.svn/: all-wcprops  entries
epics/extensions/src/SDDS/java/.svn/: all-wcprops  entries
epics/extensions/src/SDDS/java/SDDS/: Makefile  SDDSArray.java  SDDSFile.java
epics/extensions/src/SDDS/java/SDDSaps/: jsdds  sddsplot.java  sddsquery.java
epics/extensions/src/SDDS/java/SDDSedit/: Makefile  sddsEdit.java
epics/extensions/src/SDDS/lzma/.svn/: all-wcprops  entries
epics/extensions/src/SDDS/lzma/lzma/: base.h
epics/extensions/src/SDDS/matlab/.svn/: entries
epics/extensions/src/SDDS/matlib/.svn/: all-wcprops  (+1 more)
epics/extensions/src/SDDS/mdbcommon/: find_files.c  recycle.c  scanargs.c
epics/extensions/src/SDDS/mdblib/: binsert.c  fexists.c  filestat.c  non_dominated_sort.c  sortfunctions.c  time.c
epics/extensions/src/SDDS/mdbmth/: drand.c  gaussFit.c  halton.c  sigLevel.c
epics/extensions/src/SDDS/meschach/: bkpfacto.c  ivecop.c  sparse.c  spbkp.c
epics/extensions/src/SDDS/oagLib/: Makefile.OAG
epics/extensions/src/SDDS/python/: sddsdatamodule.c
(+213 files in other folders)
